cf_analysis_results/checkerframework_results/url10fb6bd43e_guwere_P2PSearch_tgz-pJ8-MainJ8.txt
../../../../datasets/june2020_dataset/url10fb6bd43e_guwere_P2PSearch_tgz-pJ8-MainJ8/src/Sender.java:14: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1 $$ java.net.DatagramSocket $$ regular method exit $$ ( 380, 400 ) $$ @MustCall method close may not have been invoked on temp-var-1 or any of its aliases.
            socket = new DatagramSocket();
                     ^
  The type of object is: java.net.DatagramSocket.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url10fb6bd43e_guwere_P2PSearch_tgz-pJ8-MainJ8/src/Main.java:28: error: (required.method.not.called) $$ 4 $$ method close $$ socket $$ java.net.DatagramSocket $$ regular method exit $$ ( 1123, 1172 ) $$ @MustCall method close may not have been invoked on socket or any of its aliases.
            DatagramSocket socket = new DatagramSocket(port);
                           ^
  The type of object is: java.net.DatagramSocket.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url10fb6bd43e_guwere_P2PSearch_tgz-pJ8-MainJ8/src/Main.java:47: error: (required.method.not.called) $$ 4 $$ method close $$ socket $$ java.net.DatagramSocket $$ regular method exit $$ ( 1906, 1955 ) $$ @MustCall method close may not have been invoked on socket or any of its aliases.
            DatagramSocket socket = new DatagramSocket(port);
                           ^
  The type of object is: java.net.DatagramSocket.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url10fb6bd43e_guwere_P2PSearch_tgz-pJ8-MainJ8/src/Main.java:65: error: (required.method.not.called) $$ 4 $$ method close $$ socket $$ java.net.DatagramSocket $$ regular method exit $$ ( 2662, 2695 ) $$ @MustCall method close may not have been invoked on socket or any of its aliases.
            socket = new DatagramSocket(port);
                   ^
  The type of object is: java.net.DatagramSocket.
  Reason for going out of scope: regular method exit
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors
